# NetworkManagerPro

./: .gitattributes  .gitignore  Audit and plan.md  CHANGELOG.md  README.md  SECURITY.md  anomaly_detection.py  branding.py  broker_contract.py  broker_runtime.py  config.json  core.py  deep_diagnostics.py  diagnostics.py  enterprise_policy.py  event_log.py  forensics_plan.py  frontier_policy.py  gui.py  history_store.py  hosts_manager.py  lucid_cli.py  main.py  main.spec  monitor_service.py  nmp_cli.py  overlay_networks.py  plugin_api.py  plugin_host.py  plugin_manager.py  plugin_platform.py  power_policy.py  pyproject.toml  release_verification.py  requirements-dev.txt  requirements.txt  signing_research.py  traffic_collector.py
docs/: ARCHITECTURE.md  CLI_AND_POWER_MODE.md  CONFIG.md  DEEP_DIAGNOSTICS_FRAMEWORK.md  ELEVATED_BROKER_DESIGN.md  ENTERPRISE_DEPLOYMENT.md  ETW_PER_PROCESS_BANDWIDTH_RESEARCH.md  FORENSICS_SIDECAR.md  FRONTIER_FORENSICS_AND_ENFORCEMENT_RESEARCH.md  GLOSSARY.md  INSTALL.md  OVERLAY_AND_FRONTIER_RESEARCH.md  PLUGINS.md  PLUGIN_PLATFORM_ROADMAP.md  PLUGIN_SIGNING_RESEARCH.md  PRODUCT_VISION_AND_BRANDING.md  QUICKSTART.md  RESEARCH_AND_FRONTIER_BACKLOG.md  SECURITY_AND_PRIVACY.md  SIEM_OPENTELEMETRY_RESEARCH.md  TRANSPORT_AND_ROUTE_DIAGNOSTICS_RESEARCH.md  TROUBLESHOOTING.md  USAGE.md  WASM_PLUGIN_RUNTIME_RESEARCH.md
enterprise/: LucidNet.admx
installer/: LucidNet.iss  NetworkManagerPro.iss
scripts/: build_release.ps1  make_icons.py  smoke_check.py
tests/: conftest.py  test_branding.py  test_config_migration.py  test_ddns.py  (+15 more)
(+6 files in other folders)
